# mdbook-tailor

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/: dependabot.yml  renovate.json5
.github/workflows/: rust.yml
res/: convert.sh
src/: lib.rs  main.rs  tailor.rs
test/: ok.md  test.md  test2.md  test5.avif  test7.jxl
