[package]
name = "mdbook-tailor"
version = "0.8.1"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "mdbook preprocessor for image-tailor"
documentation = "https://github.com/CoralPink/mdbook-tailor/blob/main/README.md"
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/mdbook-tailor"
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "image", "tailor"]

[dependencies]
clap = "=4.5.11"
image = "=0.25.2"
mdbook = "=0.4.40"
regex = "=1.10.5"
semver = "=1.0.23"
serde_json = "=1.0.120"

[dev-dependencies]
pretty_assertions = "=1.4.0"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"
