[package]
name = "mdbook-tailor"
version = "0.9.0"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "mdbook preprocessor for image-tailor"
documentation = "https://github.com/CoralPink/mdbook-tailor/blob/main/README.md"
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/mdbook-tailor"
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "image", "tailor"]

[dependencies]
clap = "4.5.39"
image = "0.25.6"
mdbook = "0.4.51"
regex = "1.11.1"
semver = "1.0.26"
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"
