[package]
name = "mdbook-tailor"
version = "2.0.0"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "mdbook preprocessor for image-tailor"
documentation = "https://github.com/CoralPink/mdbook-tailor/blob/main/README.md"
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/mdbook-tailor"
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "image", "tailor"]

[dependencies]
clap = "4.6.1"
imagesize = "0.14.0"
itoa = "1.0.18"
mdbook-preprocessor = "0.5.2"
memchr = "2.8.0"
regex = "1.12.3"
semver = "1.0.28"
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"
